objects/Case.object
<CustomObject>
    <fields>
        <fullName>Client_Delight_Issue__c</fullName>
        <label>Client Delight Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backorder</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Delivery - HDL</fullName>
                </value>
                <value>
                    <fullName>Delivery - UPS</fullName>
                </value>
                <value>
                    <fullName>HDL Driver Issue</fullName>
                </value>
                <value>
                    <fullName>Order Push Out</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Product Quality</fullName>
                </value>
                <value>
                    <fullName>Replacement Parts</fullName>
                </value>
                <value>
                    <fullName>Special Order</fullName>
                </value>
                <value>
                    <fullName>Special Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <label>Client Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <label>Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Requested_Scheduling_Instructions__c</fullName>
        <label>Client Requested Scheduling Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                    <default>true</default>
                    <label>Client</label>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Gallery</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>VIP/BOD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_type_Sort__c</fullName>
        <formula>CASE(TEXT(Client_Type__c), &quot;Platinum&quot;, 0, &quot;VIP/BOD&quot;, 1, &quot;High $&quot;, 2, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Type Sort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>MOS</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Exchanged</fullName>
                </value>
                <value>
                    <fullName>Keep As Is</fullName>
                </value>
                <value>
                    <fullName>Return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Date_Communicated_Count__c</fullName>
        <inlineHelpText>Number of Case Line records with Interim Update set to Contact Date Communicated.</inlineHelpText>
        <label>Contact Date Communicated Count</label>
        <summaryFilterItems>
            <field>Case_Line_Items__c.IsStaleDate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Case_Line_Items__c.Interim_Update__c</field>
            <operation>equals</operation>
            <value>Contact Date Communicated</value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Line_Items__c.Case_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <summarizedField>Case_Line_Items__c.Current_Available_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Case_Line_Items__c.Current_Available_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Case_Line_Items__c.Case_Number__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contact_Tier__c</fullName>
        <description>Created for use with the MDM project by Traction on Demand. Functionality for this field was not in scope for Phase 1.</description>
        <formula>Contact.Tier_Display__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Source__c</fullName>
        <description>Used specifically for corporate CS cases</description>
        <label>Corporate Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Sub_Topic__c</fullName>
        <label>Corporate Sub-Topic</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Topic_Notes__c</fullName>
        <label>Corporate Topic Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Topic__c</fullName>
        <description>Used specifically for Corporate CS cases</description>
        <label>Corporate Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HDL</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Gallery/Outlet</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>Replacement Parts</fullName>
                </value>
                <value>
                    <fullName>VIP Service</fullName>
                </value>
                <value>
                    <fullName>CSC</fullName>
                </value>
                <value>
                    <fullName>Non HDL Delivery</fullName>
                </value>
                <value>
                    <fullName>SOP</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Corporate_Type__c</fullName>
        <description>Used specifically for Corporate CS cases</description>
        <label>Corporate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEO Escalation</fullName>
                </value>
                <value>
                    <fullName>Exec Escalation</fullName>
                </value>
                <value>
                    <fullName>Corp Call/Email</fullName>
                </value>
                <value>
                    <fullName>Returning Customer</fullName>
                </value>
                <value>
                    <fullName>Unnecessary/Non Escalated Issue</fullName>
                </value>
                <value>
                    <fullName>Better Business Bureau</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>BOD/VIP</fullName>
                </value>
                <value>
                    <fullName>Restricted Client</fullName>
                </value>
                <value>
                    <fullName>MOS Request</fullName>
                </value>
                <value>
                    <fullName>Celebrity Barter</fullName>
                </value>
                <value>
                    <fullName>CSI</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>HDL</fullName>
                </value>
                <value>
                    <fullName>Gallery</fullName>
                </value>
                <value>
                    <fullName>Personal Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_Case_Owners__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count of Case Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Cases__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Inbound_Messages__c</fullName>
        <label>Count of Inbound Messages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Outbound_Messages__c</fullName>
        <description>Gets updated by the workflow rule &quot;Count Outbound Email Messages.&quot; Each time there is an outbound email sent on a case, this field gets updated. Used specifically on Email and Web Inquiries cases.</description>
        <label>Count of Outbound Messages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Queue_Owners__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count of Queue Owners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For time senstive customer issues check box if customer is aware of exception</inlineHelpText>
        <label>Customer Contacted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Follow-up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <inlineHelpText>Input an customer number if no order number exists</inlineHelpText>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Reason__c</fullName>
        <label>DC Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Preference</fullName>
                </value>
                <value>
                    <fullName>DMG UPS</fullName>
                </value>
                <value>
                    <fullName>Handling/Packaging</fullName>
                </value>
                <value>
                    <fullName>Missing/Wrong Hardware</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>QA/Workmanship</fullName>
                </value>
                <value>
                    <fullName>Shading</fullName>
                </value>
                <value>
                    <fullName>Vendor Label</fullName>
                </value>
                <value>
                    <fullName>Web Depiction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRS_Request_Called_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DRS Request Called In?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRS_Resolution_Reason__c</fullName>
        <label>DRS Resolution Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Contacts Provided</fullName>
                </value>
                <value>
                    <fullName>Change of Address Processed</fullName>
                </value>
                <value>
                    <fullName>Customer Escalation</fullName>
                </value>
                <value>
                    <fullName>Duplicate EMC</fullName>
                </value>
                <value>
                    <fullName>ETA Provided</fullName>
                </value>
                <value>
                    <fullName>Information in RHOM</fullName>
                </value>
                <value>
                    <fullName>Manual HDL Created</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>No Additional Contacts</fullName>
                </value>
                <value>
                    <fullName>OS&amp;D Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partial Delivery Approved</fullName>
                </value>
                <value>
                    <fullName>Re-direct Processed</fullName>
                </value>
                <value>
                    <fullName>Replacement Parts Re-order</fullName>
                </value>
                <value>
                    <fullName>RHOM checklist Cancellation Requested</fullName>
                </value>
                <value>
                    <fullName>RM Approval Required</fullName>
                </value>
                <value>
                    <fullName>Sent to Gallery for client follow up</fullName>
                </value>
                <value>
                    <fullName>Special Delivery Request Approved</fullName>
                </value>
                <value>
                    <fullName>WRTA Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRS_reason__c</fullName>
        <inlineHelpText>Field no longer in use - Use &quot;Request Category&quot; field</inlineHelpText>
        <label>DRS Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checklist Needed</fullName>
                </value>
                <value>
                    <fullName>Assembly/Parts</fullName>
                </value>
                <value>
                    <fullName>Cancelled Delivery</fullName>
                </value>
                <value>
                    <fullName>Cancelled Return</fullName>
                </value>
                <value>
                    <fullName>Change of Address</fullName>
                </value>
                <value>
                    <fullName>Conditional Delivery</fullName>
                </value>
                <value>
                    <fullName>Contact Issue</fullName>
                </value>
                <value>
                    <fullName>Delivery Refusal</fullName>
                </value>
                <value>
                    <fullName>Surprise Pick Up</fullName>
                </value>
                <value>
                    <fullName>ETA Request</fullName>
                </value>
                <value>
                    <fullName>Failed Deluxe</fullName>
                </value>
                <value>
                    <fullName>Re-Direct</fullName>
                </value>
                <value>
                    <fullName>Special Delivery</fullName>
                </value>
                <value>
                    <fullName>Special Hold</fullName>
                </value>
                <value>
                    <fullName>Billing/Order Inquiry</fullName>
                </value>
                <value>
                    <fullName>Partial Return</fullName>
                </value>
                <value>
                    <fullName>Mattress 3rd Quality</fullName>
                </value>
                <value>
                    <fullName>-- None --</fullName>
                    <isActive>false</isActive>
                    <label>-- None --</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL(   Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_in_Pending_Customer_Reply__c</fullName>
        <description>Gets updated by the workflow &quot;Set Pending Customer Reply Date.&quot; Sets the date when the user changes the sub status to Pending Customer Reply. Used primarily for Email and Web Inquiries cases.</description>
        <label>Date in Pending Customer Reply</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Pending_Customer_Reply__c</fullName>
        <description>Calculates the number of days that a case has been in Pending Customer Reply.</description>
        <formula>IF( ISPICKVAL (Sub_Status__c, &quot;Pending Customer Reply&quot;), TODAY() -  Date_in_Pending_Customer_Reply__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Pending Customer Reply</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_CSC__c</fullName>
        <formula>IF( IsClosed = True,  DATEVALUE( ClosedDate )- CSC_Queue_Transfer__c,( TODAY() -CSC_Queue_Transfer__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in CSC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Gallery__c</fullName>
        <formula>IF(ISBLANK(CSC_Queue_Transfer__c), TODAY() -DATEVALUE( CreatedDate ),CSC_Queue_Transfer__c-DATEVALUE( CreatedDate ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Gallery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay_Notification_Reason__c</fullName>
        <label>Delay Notification Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Days Moved In</fullName>
                </value>
                <value>
                    <fullName>Days Moved Out</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Lines Moved Total</fullName>
                </value>
                <value>
                    <fullName>Order Total</fullName>
                </value>
                <value>
                    <fullName>Special Attention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delight_Plan_In_Place__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delight Plan In Place</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delight_Plan_in_Place_Date_Time__c</fullName>
        <label>Delight Plan in Place Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivered_to_Customer_Date__c</fullName>
        <label>Delivered to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee_Refund_Surcharge_Refund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Fee Refund/Surcharge Refund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Market__c</fullName>
        <label>Delivery Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Failed Delivery</fullName>
                </value>
                <value>
                    <fullName>In Process with DC/HDL</fullName>
                </value>
                <value>
                    <fullName>Waiting on Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Formula__c</fullName>
        <formula>CW_SKU_ID__r.Department_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_CS__c</fullName>
        <description>Designer Services</description>
        <label>Design CS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <label>Designer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desired_Furniture_Delivery_Date__c</fullName>
        <inlineHelpText>Enter only if known; event date, installation, etc.</inlineHelpText>
        <label>Desired Furniture Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Center__c</fullName>
        <label>Distribution Center</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Agent__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Baltimore - 98</fullName>
                </value>
                <value>
                    <fullName>Mira Loma - 97</fullName>
                </value>
                <value>
                    <fullName>Dallas - 96</fullName>
                </value>
                <value>
                    <fullName>San Francisco - 95</fullName>
                </value>
                <value>
                    <fullName>Ohio - 89</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distro_Date__c</fullName>
        <label>Distro Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distro_Number__c</fullName>
        <label>Distro Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Use__c</fullName>
        <description>This field was added to eliminate the future processing calendar popping up and also to be used in the future for web order number.</description>
        <inlineHelpText>This field is for future use.</inlineHelpText>
        <label>Do Not Use</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_Date__c</fullName>
        <label>ETA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EXT_Order_Number__c</fullName>
        <label>EXT Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elapsed_Time_with_Customer__c</fullName>
        <formula>DATEVALUE(CreatedDate) - Delivered_to_Customer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time with Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Alert_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked means an email alert will be sent via workflow. Used by Credit Card Declines and Delay Notifications.</inlineHelpText>
        <label>Email Alert Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Case_Category__c</fullName>
        <label>Email Case Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origin</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order Inquiries</fullName>
                </value>
                <value>
                    <fullName>Product Solutions</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Field Leader Issues</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Returns/Exchanges</fullName>
                </value>
                <value>
                    <fullName>Store Product Inquiries</fullName>
                </value>
                <value>
                    <fullName>VIP Store</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Designer Services</fullName>
                </value>
                <value>
                    <fullName>Membership Update or Inquiry</fullName>
                </value>
                <value>
                    <fullName>Membership Update or Inquiry - Gallery</fullName>
                </value>
                <value>
                    <fullName>Order Update or Inquiry</fullName>
                </value>
                <value>
                    <fullName>Order Update or Inquiry - Gallery</fullName>
                </value>
                <value>
                    <fullName>Resale</fullName>
                </value>
                <value>
                    <fullName>Resale - Gallery</fullName>
                </value>
                <value>
                    <fullName>Contract Inquiry</fullName>
                </value>
                <value>
                    <fullName>B&amp;C/RH Teen</fullName>
                </value>
                <value>
                    <fullName>Bed &amp; Bath</fullName>
                </value>
                <value>
                    <fullName>Casegoods &amp; Dining</fullName>
                </value>
                <value>
                    <fullName>Lighting, Textiles &amp; Decor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Upholstery</fullName>
                </value>
                <value>
                    <fullName>Dup/NRN</fullName>
                </value>
                <value>
                    <fullName>RH Membership - Inquiry</fullName>
                </value>
                <value>
                    <fullName>RH Membership - Request</fullName>
                </value>
                <value>
                    <fullName>RH Membership - Website</fullName>
                </value>
                <value>
                    <fullName>RH Membership - Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Set automatically. Records the number of times an email was sent to the customer.</inlineHelpText>
        <label>Email Contacts per Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>